booking gap fixed

--- a/public/assets/plugins/slider-pro/slider-pro.css
+++ b/public/assets/plugins/slider-pro/slider-pro.css
@@ -35,6 +35,7 @@
   overflow: hidden;
   position: absolute;
   top: 0;
+  width:100%;
 }
 .sp-image-container:after {
   content: '';
